--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <iframe src="assets/KumaresanSResume.pdf" width="100%" height="500px"></iframe>
           </div>
           <div class="modal-footer">
-            <a href="assets/KumaresanSResume.pdf" download class="btn btn-success">Download Resume</a>
+            <a href="assets/Kumaresan S CSE KSRCE.pdf" download class="btn btn-success">Download Resume</a>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
