--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <iframe src="assets/KumaresanSResume.pdf" width="100%" height="500px"></iframe>
+            <iframe src="assets/Kumaresan S CSE KSRCE.pdf" width="100%" height="500px"></iframe>
           </div>
           <div class="modal-footer">
             <a href="assets/Kumaresan S CSE KSRCE.pdf" download class="btn btn-success">Download Resume</a>
